# ESP32-Power-Plug-with-Energy-Meter

./: README.md  sdkconfig  sdkconfig.defaults
components/bl0937/: CMakeLists.txt  Kconfig.projbuild
main/: BL0937.c  BL0937.h  CMakeLists.txt  Kconfig.projbuild  bl0937.c  bl0937.h  component.mk  custom_characteristics.c  custom_characteristics.h  esp32-lcm.c  esp32-lcm.h  homekit_compat.h  idf_component.yml  main.c
